# Wash-Trade-Scanner

./: .dockerignore  .env.example  .gitignore  CHANGELOG  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.yml  dockerfile  foldertree.txt  pyproject.toml  reproduce_hft_bug.py  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: CI.yml
.jules/: bolt.md  sentinel.md
api/: __init__.py  auth.py  middleware.py  server.py
api/static/: index.html  panel.css  panel.js
config/: __init__.py  chains.py  settings.py  types.py
core/: __init__.py  advanced_heuristics.py  circuit_breaker.py  entity_clustering.py  exceptions.py  feature_engineer.py  heuristics.py  ingestor.py  ml_detector.py  price_oracle.py  realtime_monitor.py  reporting.py  storage.py  validators.py
docs/: api.md  architecture.md  configuration.md  installation.md  security.md
git/: config  index  packed-refs
models/: __init__.py  schemas.py
scripts/: __init__.py  benchmark_audit_pipeline.py  benchmark_bolt.py  benchmark_bot_detection.py  benchmark_features.py  benchmark_heuristics.py  benchmark_ml_explain.py  benchmark_replace.py  benchmark_volume_anomaly.py  generate_api_key.py  reproduce_hft_bug.py  run_audit.py  train_model.py  verify_parallelization.py
tests/: __init__.py  test_advanced_heuristics.py  test_api.py  test_bolt_optimization.py  test_circuit_breaker.py  test_entity_clustering.py  test_feature_engineer.py  test_heuristics.py  test_heuristics_extended.py  test_hft_bot.py  test_ingestor.py  test_ml_detector.py  test_realtime_monitor.py  test_run_audit.py  test_security.py  test_security_chain_id.py  test_security_dos.py  test_security_enhanced.py  test_security_entity_clustering.py  test_security_masking.py  test_security_rpc_masking.py  test_storage.py  test_train_model.py  test_train_model_security.py  test_validators.py  test_validators_new.py  test_volume_anomaly.py  test_volume_anomaly_optimized.py
