[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wash-trade-detector"
version = "1.0.1"
description = "Multi-chain wash trade and fake volume detection system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Yog-Sotho", email = "yog-sotho@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Office/Business :: Financial"
]
dependencies = [
    "web3>=6.15.0,<7.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.0
