[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wash-trade-detector"
version = "1.0.1"
description = "Multi-chain wash trade and fake volume detection system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
   {name = "Yog-Sotho", email = "yog-sotho@example.com"}
]
classifiers = [
   "Development Status :: 4 - Beta",
   "Intended Audience :: Financial and Insurance Industry",
   "License :: OSI Approved :: MIT License",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Topic :: Security",
   "Topic :: Office/Business :: Financial"
]
dependencies = [
   "web3>=6.15.0,<7.0.0",
   "asyncpg>=0.29.0,<1.0.0",
   "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
   "alembic>=1.12.0,<2.0.0",
   "pydantic>=2.5.0,<3.0.0",
   "pydantic-settings>=2.1.0,<3.0.0",
   "python-dotenv>=1.0.0,<2.0.0",
   "pandas>=2.2.0,<3.0.0",
   "numpy>=1.26.0,<2.0.0",
   "scipy>=1.12.0,<2.0.0",
   "networkx>=3.2.0,<4.0.0",
   "scikit-learn>=1.4.0,<2.0.0",
   "joblib>=1.3.0,<2.0.0",
   "aiohttp>=3.9.0,<4.0.0",
   "redis>=5.0.0,<6.0.0",
   "python-json-logger>=2.0.0,<3.0.0",
   "tqdm>=4.66.0,<5.0.0",
   "fastapi>=0.110.0,<1.0.0",
   "uvicorn>=0.29.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
   "pytest>=8.0.0",
   "pytest-asyncio>=0.23.0",
   "pytest-mock>=3.12.0",
   "pytest-cov>=4.1.0",
   "ruff>=0.2.0",
   "mypy>=1.8.0",
   "types-python-dateutil>=2.8.0",
   "pandas-stubs>=2.2.0",
   "types-networkx>=3.2.0",
   "coverage>=7.4.0",
   "hypothesis>=6.98.0",
   "pip-audit>=2.7.0",
   "safety>=3.0.0",
   "bandit>=1.7.7",
   "cyclonedx-bom>=4.0.0",
   "httpx>=0.27.0",
]

[project.scripts]
wash-audit = "scripts.run_audit:cli"
wash-train = "scripts.train_model:cli"
wash-api = "api.server:cli"
wash-genkey = "scripts.generate_api_key:cli"

[tool.setuptools.packages.find]
include = ["api*", "config*", "core*", "models*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "ARG"]
ignore = [
   "E501",   # line length handled by ruff format
   "ARG002", # detector methods share a common (session) signature by design
   "N806",   # `G` is the conventional name for a networkx graph
   "N802",   # settings fields/properties intentionally mirror env var names (e.g. DATABASE_URL)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
show_error_codes = true
strict = true
exclude = ["tests/", "migrations/"]

# No official type stubs / py.typed marker for these; the numpy/scipy ML stack has
# long-standing gaps here rather than anything specific to this project. pandas and
# networkx have dedicated stub packages (see dev dependencies) so aren't listed here.
[[tool.mypy.overrides]]
module = ["sklearn.*", "scipy.*", "joblib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.bandit]
exclude_dirs = ["tests"]
# B101: internal use of assert is intentional (not a prod input-validation path)
# B105: false positives on native-token symbols in config/chains.py (e.g. "KAVA", "KLAY")
skips = ["B101", "B105"]

[tool.coverage.run]
source = ["core", "config", "models", "scripts"]
omit = ["tests/*", "*/tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
